# capillas

./: AGENTS.md  Presentacion.pptx  _opencode.json  presentacion_comercial.html
.opencode/skills/template/: README.md  SKILL.md
docs/: _guion_presentacion.md  _guion_presentacion_cartas.md  _presentacion.html  _propuesta_comercial.md  contexto_base.md  guion_presentacion_tecnica.md  presentacion_tecnica.md  propuesta_estrategica.md  propuesta_tecnologica.md  propuesta_tecnologica_final.md
docs/adr/: 0000-template.md  0001-use-adrs.md  CHANGELOG.md  README.md
docs/arquitectura/: propuesta_tecnologica.md  propuesta_tecnologica_final.md
docs/negocio/: rag_base.md
docs/slides/: README.md  pitch-deck.md  prompts-imagenes.md  theme-capillas.css
docs/specs/: TEMPLATE.md
docs/tools/: STACK.md
prototipo/: README.md  docker-compose.yml
prototipo/backend/: .env.example  Dockerfile  requirements.txt
prototipo/backend/app/: config.py  database.py  main.py
prototipo/backend/app/models/: document.py
prototipo/backend/app/routers/: chat.py  documents.py
prototipo/backend/app/schemas/: api.py
prototipo/backend/app/services/: embeddings.py  ingestion.py  presidio_service.py  rag.py
prototipo/frontend/: index.html
prototipo/knowledge_base/clientes/: adulto-mayor.md  familia-joven.md
prototipo/knowledge_base/objeciones/: esta-caro.md  lo-voy-a-pensar.md
prototipo/knowledge_base/planes/: plan-basico-individual.md  plan-familiar-premium.md  tags.txt
prototipo/knowledge_base/playbooks/: sala-de-velacion.md
prototipo/knowledge_base/reglas/: restricciones.md
src/analytics/: Dockerfile  pyproject.toml
src/analytics/app/: main.py
src/bff/: Dockerfile  pyproject.toml
src/knowledge-base/: Dockerfile  pyproject.toml
src/knowledge-base/app/: main.py
src/rag-service/: Dockerfile  pyproject.toml
src/rag-service/app/: main.py
src/shared/: pyproject.toml
src/widget/: package.json  tsconfig.json  vite.config.ts
