[project]
name = "capillas-knowledge-base"
version = "0.1.0"
description = "Knowledge Base Service - Capillas Asistente Comercial IA"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "boto3>=1.35.0",
    "grpcio>=1.67.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.7.0",
]
