[project]
name = "capillas-rag"
version = "0.1.0"
description = "RAG Service - Capillas Asistente Comercial IA"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-postgres>=0.3.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-llms-bedrock>=0.3.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "openai>=1.52.0",
    "boto3>=1.35.0",
    "grpcio>=1.67.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
